--- a/XlentLock/XlentLock/XlentLock.csproj
+++ b/XlentLock/XlentLock/XlentLock.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Compile Include="App.cs" />
     <Compile Include="LockPage.cs" />
+    <Compile Include="LockService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
