added labels and images

--- a/XlentLock/XlentLock.Droid/XlentLock.Droid.csproj
+++ b/XlentLock/XlentLock.Droid/XlentLock.Droid.csproj
@@ -61,6 +61,7 @@
     <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Xml" />
     <Reference Include="Xamarin.Android.Support.v4, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -130,6 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\AndroidManifest.xml" />
+    <AndroidResource Include="Resources\drawable\fileclose.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\XlentLock\XlentLock.csproj">
