--- a/XlentLock/XlentLock.Droid/packages.config
+++ b/XlentLock/XlentLock.Droid/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ExifLib.PCL" version="1.0.1" targetFramework="monoandroid51" />
+  <package id="Mobilist.AdvancedTimer.Forms.Plugin" version="1.0.1.0" targetFramework="monoandroid51" />
   <package id="Xamarin.Android.Support.v4" version="21.0.3.0" targetFramework="monoandroid23" />
   <package id="Xamarin.Forms" version="1.4.3.6376" targetFramework="monoandroid51" />
   <package id="XLabs.Core" version="2.0.5738-pre7" targetFramework="monoandroid51" />
