--- a/XlentLock/XlentLock.iOS/packages.config
+++ b/XlentLock/XlentLock.iOS/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ExifLib.PCL" version="1.0.1" targetFramework="xamarinios1" />
+  <package id="Mobilist.AdvancedTimer.Forms.Plugin" version="1.0.1.0" targetFramework="xamarinios1" />
   <package id="Xamarin.Forms" version="1.4.3.6376" targetFramework="xamarinios1" />
   <package id="XLabs.Core" version="2.0.5738-pre7" targetFramework="xamarinios1" />
   <package id="XLabs.Forms" version="2.0.5738-pre7" targetFramework="xamarinios1" />
