--- a/XlentLock/XlentLock.Droid/packages.config
+++ b/XlentLock/XlentLock.Droid/packages.config
@@ -2,8 +2,15 @@
 <packages>
   <package id="ExifLib.PCL" version="1.0.1" targetFramework="monoandroid51" />
   <package id="Mobilist.AdvancedTimer.Forms.Plugin" version="1.0.1.0" targetFramework="monoandroid51" />
-  <package id="Xamarin.Android.Support.v4" version="21.0.3.0" targetFramework="monoandroid23" />
-  <package id="Xamarin.Forms" version="1.4.3.6376" targetFramework="monoandroid51" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="23.3.0" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="23.3.0" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.3.0" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.3.0" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="23.3.0" targetFramework="monoandroid70" />
+  <package id="Xamarin.Forms" version="2.3.2.127" targetFramework="monoandroid70" />
   <package id="XLabs.Core" version="2.0.5738-pre7" targetFramework="monoandroid51" />
   <package id="XLabs.Forms" version="2.0.5738-pre7" targetFramework="monoandroid51" />
   <package id="XLabs.IoC" version="2.0.5738-pre7" targetFramework="monoandroid51" />
